# trend-lines-generator

./: README.md  example.py  pyproject.toml
tests/: conftest.py
tests/data/: example.csv
tests/factories/: test_board.py
tests/generator/: test_generator.py
tests/models/: test_aline.py  test_board.py  test_line.py  test_time.py
tests/use_cases/: test_generate_alines.py
tests/utils/: test_find_significant.py
tlines/: __init__.py
tlines/factories/: __init__.py  board.py
tlines/models/: __init__.py  aline.py  board.py  hline.py  line.py  side.py  time.py
tlines/use_cases/: __init__.py  generate_alines.py  generate_lines.py
trend_lines/: __init__.py  generator.py  utils.py
trend_lines/factories/: board.py
trend_lines/models/: __init__.py  board.py  line.py
