[tool.poetry]
name = "tlines"
version = "0.1.0"
description = "Trend lines generator."
authors = ["Oleksandr Polieno <polyenoom@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
