[tool.poetry]
name = "trend-lines-generator"
version = "0.1.2"
description = "Trend lines generator."
authors = ["Oleksandr Polieno <polyenoom@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nanvel/trend-lines-generator"
keywords = ["trendlines", "trend lines", "trend", "ta", "resistance", "support", "technical", "indicators", "financial"]
packages = [{include = "trend_lines"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
